Fix collapse animation issue

--- a/frontend/src/css/sections/_experience.scss
+++ b/frontend/src/css/sections/_experience.scss
@@ -40,6 +40,7 @@
                 @include size(1rem, 1rem);
                 border: var(--border-size-lg) solid var(--background-light-10);
                 border-radius: 50%;
+                transition: 1s;
             }
 
             .timeline-card {
@@ -48,7 +49,8 @@
                 border-radius: 14px;
                 background: var(--background-dark-2);
                 border: var(--border-size-sm) solid grey;
-                transition: var(--transition-slow);
+                padding-bottom: 0;
+                transition: padding-bottom 1s ease-in-out;
 
                 &:hover {
                     border-color: var(--secondary);
@@ -104,8 +106,9 @@
                 .details {
                     max-height: 0;
                     overflow: hidden;
-                    transition: max-height 0.4s ease, opacity 0.3s ease;
+                    transition: 0.75s ease-in-out;
                     opacity: 0;
+                    margin-top: 1.2rem;
 
                     ul {
                         padding-left: 1.2rem;
@@ -134,10 +137,18 @@
                 }
             }
 
+            &.active .timeline-card {
+                padding-bottom: 2rem;
+                transition: padding-bottom 0s ease-in-out;
+            }
+
+            &.active .timeline-dot {
+                border-color: var(--primary);
+            }
+
             &.active .details {
                 max-height: 1000px;
                 opacity: 1;
-                margin-top: 1.2rem;
             }
         }
     }
